Updated template repo
- added GitHub CI action
- updated util classes (TODO: move these to a separate jar at some point)
- updated webserver and servlet classes
- removed manual build processes and replaced with 'Badass Runtime' plugin