@@ -1,6 +1,9 @@
+import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
+
 plugins {
     id 'java-library'
     id "com.github.johnrengelman.shadow" version "6.0.0"
+    id 'org.beryx.runtime' version '1.11.3'
 }
 
 group 'com.glenfordham'
@@ -16,17 +19,34 @@ sourceSets.main.java.srcDirs = ['src/main/java/']
 sourceSets.main.resources.srcDirs = [ "src/main/resources" ]
 sourceSets.main.resources.includes = [ "**/*.xml" ]
 
-final String buildJrePath = "$buildDir\\package\\"
-final String libsPath = "$buildDir\\libs\\"
+mainClassName = 'com.glenfordham.webserver.Application'
+final OperatingSystem os = DefaultNativePlatform.currentOperatingSystem
+final String sep = File.separator
 
 jar {
     manifest {
         attributes(
-                'Main-Class': 'com.glenfordham.webserver.Application',
-                'Implementation-Title': 'Web Server Template',
+                'Main-Class': mainClassName,
+                'Implementation-Title': project.name,
                 // Use 'version' so Shadow Jar gets version properly
                 'Implementation-Version': version,
         )
+    }
+}
+
+runtime {
+    imageDir = file("${buildDir}${sep}webserver")
+    imageZip = file("${buildDir}${sep}webserver-${version}.zip")
+    targetPlatform("linux-s390x") {
+        jdkHome = jdkDownload("https://github.com/AdoptOpenJDK/openjdk14-binaries/releases/download/jdk-14.0.1%2B7.1/OpenJDK14U-jdk_x64_windows_hotspot_14.0.1_7.zip")
+    }
+
+    targetPlatform("win") {
+        jdkHome = jdkDownload("https://github.com/AdoptOpenJDK/openjdk14-binaries/releases/download/jdk-14.0.1%2B7.1/OpenJDK14U-jdk_x64_windows_hotspot_14.0.1_7.zip")
+    }
+
+    targetPlatform("mac") {
+        jdkHome = jdkDownload("https://github.com/AdoptOpenJDK/openjdk14-binaries/releases/download/jdk-14.0.1%2B7/OpenJDK14U-jdk_x64_mac_hotspot_14.0.1_7.tar.gz")
     }
 }
 
@@ -41,53 +61,13 @@ dependencies {
 
     implementation 'commons-cli:commons-cli:1.4'
     implementation 'commons-io:commons-io:2.7'
+    implementation 'org.apache.commons:commons-lang3:3.11'
     implementation 'org.apache.logging.log4j:log4j-core:2.13.3'
     implementation 'org.apache.tomcat.embed:tomcat-embed-core:'+tomcatVersion
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:'+tomcatVersion
     implementation 'org.apache.tomcat:tomcat-jasper:'+tomcatVersion
     implementation 'org.apache.tomcat:tomcat-jasper-el:'+tomcatVersion
     implementation 'org.apache.tomcat:tomcat-jsp-api:'+tomcatVersion
-}
-
-// Output all dependency jars to a folder
-task copyToLib(type: Copy) {
-    from configurations.compileClasspath
-    into libsPath
-}
-
-// Analyse project and retrieve modules used
-task getModuleList(dependsOn:["copyToLib","jar"],type:Exec) {
-    workingDir '.\\'
-    commandLine 'cmd', '/c', 'jdeps --print-module-deps --multi-release 11 ' + libsPath + '*'
-    standardOutput = new ByteArrayOutputStream()
-    // Allows other tasks to get output of this task
-    ext.out = {
-        // Remove unwanted line breaks
-        return standardOutput.toString().replace("\r\n", "")
-    }
-}
-
-// Build runtime files with jlink
-task buildJre(dependsOn:["getModuleList","deleteJre"],type:Exec) {
-    doFirst {
-        workingDir '.\\'
-        commandLine 'cmd', '/c', 'jlink --add-modules ' + (String) tasks.getModuleList.out() + ' --output ' + buildJrePath
-    }
-}
-
-// Delete existing JRE folder
-task deleteJre(type:Delete) {
-    doFirst {
-        try {
-            project.delete buildJrePath
-        } catch (IOException ignore) {}
-    }
-}
-
-// Copy FAT jar to JRE for packaging
-task copyFatJar(dependsOn:"shadowJar",type:Copy) {
-    from file(libsPath + project.name + "-" + version + "-all.jar")
-    into file(buildJrePath)
 }
 
 static def gitCommitNumber() {
